# hexbot

./: .gitingnore  CMakeLists.txt  package.xml
arm_test/: CMakeLists.txt  package.xml
arm_test/launch/: control.launch  simenv.launch
arm_test/scripts/: arm_sim_controller.py  controller.py
arm_test/urdf/: arm.xacro  simenv.xacro
config/: config.rviz  hexbot_control.yaml  joint_names_hexbot.yaml  motor_pos.yaml
include/: vel_msg.h
launch/: control.launch  display.launch  gazebo.launch  useparam.launch
meshes/: base_link.STL  foot.STL  shin.STL  thigh.STL
scripts/: demo_pub.py  topictogazebo.py
src/: publisher.cpp  set_speed_joint_plugin.cpp  subscriber.cpp  write_from_param.cpp
urdf/: hexbot.csv  hexbot.urdf  hexbot.xacro  legs.xacro  macros.xacro  properties.xacro  transmissions.xacro
