<package format="2">
  <name>hexbot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for hexbot</p>
    <p>This package contains configuration data, 3D models and launch files
for hexbot robot</p>
  </description>
  <author>Macavitycode</author>
  <maintainer email="macavitycode@gmail.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>dynamic_reconfigure</depend>
  <export>
    <architecture_independent />
  </export>
</package>
